add missing css link

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Philip's Personal Site</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/profile.png" width="150px" alt="philip profile picture"></td>
+      <td><img src="images/profile.png" width="150px" alt="profile picture"></td>
       <td>
         <h1>Philip Luk</h1>
         <p><em>Senior Software Engineering Manager at <strong>Mozilla</strong></em></p>
